crates/background/src/snapshots/background__knight_of_the_order__tests__ideals.snap
---
source: crates/background/src/knight_of_the_order.rs
expression: background.ideals()

---
- - Greater Good. Our lot is to lay down our lives in defense of others.
  - Good
- - Responsibility. I do what I must and obey just authority.
  - Lawful
- - "Independence. When people follow orders blindly, they embrace a kind of tyranny."
  - Chaotic
- - "Might. In life as in war, the stronger force wins."
  - Evil
- - "Live and Let Live. Ideals aren't worth killing over or going to war for."
  - Neutral
- - "Nation. My city, nation, or people are all that matter."
  - Any

