crates/background/src/snapshots/background__knight_of_the_order__tests__skills.snap
---
source: crates/background/src/knight_of_the_order.rs
expression: "KnightOfTheOrder::skills()"

---
- Persuasion
- Arcana
- History
- Nature
- Religion

