crates/background/src/snapshots/background__knight_of_the_order__tests__snapshot_addl_proficiencies.snap
---
source: crates/background/src/knight_of_the_order.rs
expression: background.addl_proficiencies()

---
- Skill:
    - - Arcana
      - History
      - Nature
      - Religion
    - 1
- FromOptions:
    - - GamingSet
      - MusicalInstrument: 1
    - 1

