crates/background/src/snapshots/background__knight_of_the_order__tests__snapshot_backstory.snap
---
source: crates/background/src/knight_of_the_order.rs
expression: background.backstory()

---
- "Knightly Order: Knights of the Shield"

