crates/background/src/snapshots/background__knight_of_the_order__tests__snapshot_display.snap
---
source: crates/background/src/knight_of_the_order.rs
expression: background

---
Knight of the Order
