crates/background/src/snapshots/background__knight_of_the_order__tests__snapshot_equipment.snap
---
source: crates/background/src/knight_of_the_order.rs
expression: background.equipment()

---
- Gear:
    Other: ClothesTravelers
- Gear:
    Other: Pouch

